Initial commit - Add complete portfolio

--- a/index.html
+++ b/index.html
@@ -28,4 +28,19 @@
     <section>
         <h2>Projects</h2>
         <p><strong>mediMart</strong><br>Developed a medical and healthcare app integrating Google Maps and Firebase<br>Jul 2022 - Aug 2022</p>
-        <p><strong>ResQMe</strong><br>Created an emergency services app with advanced UI/UX<br>Mar 2023 - Apr
+        <p><strong>ResQMe</strong><br>Created an emergency services app with advanced UI/UX<br>Mar 2023 - Apr 2023</p>
+    </section>
+    <section>
+        <h2>Skills</h2>
+        <p>Programming Languages: C, Java, Python, XML</p>
+        <p>Developer Tools: Android Studio, VS Code</p>
+        <p>Database: Firebase, SQL</p>
+        <p>Core Subjects: Operating System, DBMS, OOP</p>
+    </section>
+    <section>
+        <h2>Achievements</h2>
+        <p>Won Institute Level Solving For India Hackathon, GeeksforGeeks</p>
+        <p>Ranked 3rd in Mobile App Competition, Parul University</p>
+    </section>
+</body>
+</html>
